<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="5dp"
    android:backgroundTint="@color/element_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_foreground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:layout_weight="0.7">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginBottom="5dp"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_weight="0.8"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:textAlignment="textEnd"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rub"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:textAlignment="textStart"
                        android:layout_weight="0.5"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>